styles/header.css
/* Header section */
.header {
    display: flex;
}

.header__container {
    position: relative;
    max-width: 1250px;
    margin: 0 0 0 auto;
    width: 80%;
}

.header__wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    padding: 0 40px;
}

.header__logo {
    color: var(--clr-menu);
    border: 1px solid var(--clr-orange);
    padding: 13px 28px;
    border-radius: 16px 0 16px 16px;
    margin-right: 28px;
    text-decoration: none;
    text-transform: uppercase;
}

.header__socials .header__link {
    font-size: 1.3rem;
    color: var(--clr-black);
    margin-right: 30px;
    transition: color 200ms ease-in;
}

.header__socials .header__link:hover {
    color: var(--clr-gray);
}

.header__nav {
    width: 20%;
    display: flex;
    align-items: center;
    background: var(--clr-menu);
    transition: background 250ms ease-in;
    cursor: pointer;
}

.header__nav:hover {
    background: var(--clr-gray);
}

.header__nav.open {
    background: var(--clr-menu);
}

/* Hamburger menu*/
.header__menu { /* Hamburger button container */
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    margin: 0 0 0 20px;
    transition: margin 250ms ease-in;
}

.header__hamburger { /* middle hamburger line */
    width: 15px;
    height: 1px;
    background: var(--clr-white);
    border-radius: 5px;
    transition: transform 0.5s ease-in-out,
                background 0.5s ease-in-out;
}

.header__hamburger::before, /* First and last hamburger line */
.header__hamburger::after {
    position: absolute;
    content: '';
    width: 15px;
    height: 1px;
    background: var(--clr-white);
    border-radius: 5px;
    transition: transform 0.5s ease-in-out,
                background 0.5s ease-in-out;
}

.header__hamburger::before {
    transform: translateY(6px);
}

.header__hamburger::after {
    transform: translateY(-6px);
}

.header__nav.open .header__hamburger { /* Hide middle hamburger line */
    transform: translateX(-50px);
    background: transparent;
}

.header__nav.open .header__hamburger::before { /* Rotate first hamburger line */
    transform: rotate(45deg) translate(35px, -35px);
}

.header__nav.open .header__hamburger::after { /* Rotate last hamburger line */
    transform: rotate(-45deg) translate(35px, 35px);
}

.header__menu .header__text {
    margin-left: 20px;
    transition: color 250ms ease-in;
}

.header__list {
    position: absolute;
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    align-items: center;
    width: 20%;
    height: 250px;
    padding: 25px 0;
    background: var(--clr-menu);
    top: 80px;
    right: 0;
    transform: translateY(-1000px);
}

.header__nav.open .header__list {
    transform: translateY(0);
    animation: menuSlide 1s forwards;
}

.header__nav.close .header__list {
    transform: translateY(0);
    animation: menuSlideReverse 1s forwards;
}

.header__item {
    width: 100%;
}

.header__item .header__link {
    display: flex;
    justify-content: center;
    padding: 10px 0;
    width: 100%;
}

@keyframes menuSlide {
    0% {
        opacity: 0;
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(0);
        width: 20%;
    }    
    75% {
        opacity: 1;
    }
    100% {
        width: 100%;
    }
}

@keyframes menuSlideReverse {
    0% {
        width: 100%;
    }
    50% {
        opacity: 1;
    }    
    75% {
        transform: translateY(0);
        width: 20%;
    }
    99% {
        opacity: 0;
        transform: translateY(-1000px);
    }
    100% {
        display: none;
        transform: translateY(-1000px);
    }
}

.header__item .header__link {
    font-size: 1.2rem;
    text-transform: uppercase;
    text-decoration: none;
    color: var(--clr-primary);
    letter-spacing: 5px;
    transition: color 250ms ease-in,
                letter-spacing 250ms ease-in;
}

.header__item .header__link:hover {
    color: var(--clr-orange);
    letter-spacing: 1px;
}

/* Header media queries */
@media (max-width: 768px) {
    .header__menu {
        margin: 0 0 0 10px;
    }
}

@media (max-width: 480px) {
    .header__socials {
        display: none;
    }

    .header__nav {
        justify-content: center;
        background: transparent;
    }

    .header__menu {
        margin: 0;
    }

    .header__hamburger,
    .header__hamburger::before,
    .header__hamburger::after {
    background: var(--clr-menu);
}

    .header__menu .header__text {
        display: none;
    }

    .header__nav:hover {
        background: transparent;
    }
    
    .header__nav.open {
        background: transparent;
    }
}

